{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 50,
  "lineage": "4d0b5310-8a4a-ed65-47c9-d3de6327cc2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a894dea2e99222dc",
            "arn": "arn:aws:ec2:us-west-2:043031296302:elastic-ip/eipalloc-0a894dea2e99222dc",
            "association_id": "eipassoc-052043898f38b7a30",
            "domain": "vpc",
            "id": "eipalloc-0a894dea2e99222dc",
            "network_border_group": "us-west-2",
            "network_interface": "eni-086d68c9cbf1ec5f4",
            "private_dns": "ip-10-0-101-49.us-west-2.compute.internal",
            "private_ip": "10.0.101.49",
            "public_dns": "ec2-52-41-11-162.us-west-2.compute.amazonaws.com",
            "public_ip": "52.41.11.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-eip-1",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-eip-1",
              "Project": "sample-java-app"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bab57bc09ed7c43",
            "arn": "arn:aws:ec2:us-west-2:043031296302:elastic-ip/eipalloc-02bab57bc09ed7c43",
            "association_id": "eipassoc-0c7e04aacc0c1bbe3",
            "domain": "vpc",
            "id": "eipalloc-02bab57bc09ed7c43",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0de0c5ec1ced09607",
            "private_dns": "ip-10-0-102-178.us-west-2.compute.internal",
            "private_ip": "10.0.102.178",
            "public_dns": "ec2-35-162-201-99.us-west-2.compute.amazonaws.com",
            "public_ip": "35.162.201.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-eip-2",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-eip-2",
              "Project": "sample-java-app"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd477b58e15e4d4c",
            "arn": "arn:aws:ec2:us-west-2:043031296302:elastic-ip/eipalloc-0bd477b58e15e4d4c",
            "association_id": "eipassoc-0ab84af92ab9a21c4",
            "domain": "vpc",
            "id": "eipalloc-0bd477b58e15e4d4c",
            "network_border_group": "us-west-2",
            "network_interface": "eni-098dba5b4e7a1ac15",
            "private_dns": "ip-10-0-103-242.us-west-2.compute.internal",
            "private_ip": "10.0.103.242",
            "public_dns": "ec2-44-237-119-216.us-west-2.compute.amazonaws.com",
            "public_ip": "44.237.119.216",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-eip-3",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-eip-3",
              "Project": "sample-java-app"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:043031296302:instance/i-0810928294ac88022",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0810928294ac88022",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "sample-java-app-jenkins-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c0f45bc2ae65642",
            "private_dns": "ip-10-0-101-80.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.80",
            "public_dns": "ec2-35-91-0-7.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.0.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bc175b0b9864c303",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aca503b01ce1ad4d",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-jenkins",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-jenkins",
              "Project": "sample-java-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04accaf630d0ca838"
            ]
          },
          "dependencies": [
            "aws_ecr_repository.app_repo",
            "aws_key_pair.jenkins_key",
            "aws_security_group.jenkins_sg",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:internet-gateway/igw-0f395d0892da504ad",
            "id": "igw-0f395d0892da504ad",
            "owner_id": "043031296302",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-igw",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-igw",
              "Project": "sample-java-app"
            },
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:043031296302:loadbalancer/app/sample-java-app-alb/2e9d6e08a111fc6c",
            "arn_suffix": "app/sample-java-app-alb/2e9d6e08a111fc6c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sample-java-app-alb-1187300512.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:043031296302:loadbalancer/app/sample-java-app-alb/2e9d6e08a111fc6c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sample-java-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-061d8ae78be88e9c3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01fbddfa5e202aeda"
              },
              {
                "subnet_id": "subnet-0404b0247f58e8122"
              },
              {
                "subnet_id": "subnet-0aca503b01ce1ad4d"
              }
            ],
            "subnets": [
              "subnet-01fbddfa5e202aeda",
              "subnet-0404b0247f58e8122",
              "subnet-0aca503b01ce1ad4d"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "sample-java-app"
            },
            "vpc_id": "vpc-05ad3f07da1b43e07",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:043031296302:listener/app/sample-java-app-alb/2e9d6e08a111fc6c/9c1c356d142c5574",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:043031296302:targetgroup/sample-java-app-tg/c07df97663c5f1cf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:043031296302:listener/app/sample-java-app-alb/2e9d6e08a111fc6c/9c1c356d142c5574",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:043031296302:loadbalancer/app/sample-java-app-alb/2e9d6e08a111fc6c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:043031296302:targetgroup/sample-java-app-tg/c07df97663c5f1cf",
            "arn_suffix": "targetgroup/sample-java-app-tg/c07df97663c5f1cf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:043031296302:targetgroup/sample-java-app-tg/c07df97663c5f1cf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:043031296302:loadbalancer/app/sample-java-app-alb/2e9d6e08a111fc6c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sample-java-app-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "sample-java-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a894dea2e99222dc",
            "association_id": "eipassoc-052043898f38b7a30",
            "connectivity_type": "public",
            "id": "nat-057b04edf60c3f261",
            "network_interface_id": "eni-086d68c9cbf1ec5f4",
            "private_ip": "10.0.101.49",
            "public_ip": "52.41.11.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aca503b01ce1ad4d",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-1",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-1",
              "Project": "sample-java-app"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bab57bc09ed7c43",
            "association_id": "eipassoc-0c7e04aacc0c1bbe3",
            "connectivity_type": "public",
            "id": "nat-0bf2b81112999b2a6",
            "network_interface_id": "eni-0de0c5ec1ced09607",
            "private_ip": "10.0.102.178",
            "public_ip": "35.162.201.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0404b0247f58e8122",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-2",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-2",
              "Project": "sample-java-app"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd477b58e15e4d4c",
            "association_id": "eipassoc-0ab84af92ab9a21c4",
            "connectivity_type": "public",
            "id": "nat-0e293c092e5c87a62",
            "network_interface_id": "eni-098dba5b4e7a1ac15",
            "private_ip": "10.0.103.242",
            "public_ip": "44.237.119.216",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01fbddfa5e202aeda",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-3",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-nat-3",
              "Project": "sample-java-app"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:route-table/rtb-00eb8a3419ddadb63",
            "id": "rtb-00eb8a3419ddadb63",
            "owner_id": "043031296302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057b04edf60c3f261",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-rt-1",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-rt-1",
              "Project": "sample-java-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:route-table/rtb-0333825e9507ce4c4",
            "id": "rtb-0333825e9507ce4c4",
            "owner_id": "043031296302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bf2b81112999b2a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-rt-2",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-rt-2",
              "Project": "sample-java-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:route-table/rtb-020b5c7449d6d7122",
            "id": "rtb-020b5c7449d6d7122",
            "owner_id": "043031296302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e293c092e5c87a62",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-rt-3",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-rt-3",
              "Project": "sample-java-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:route-table/rtb-0687f822c84e01844",
            "id": "rtb-0687f822c84e01844",
            "owner_id": "043031296302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f395d0892da504ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-public-rt",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-public-rt",
              "Project": "sample-java-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016925bea91a00409",
            "route_table_id": "rtb-00eb8a3419ddadb63",
            "subnet_id": "subnet-009d229a33e482145"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05518f6b5174dee91",
            "route_table_id": "rtb-0333825e9507ce4c4",
            "subnet_id": "subnet-07b232e140a7d0f05"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08078e05694a26294",
            "route_table_id": "rtb-020b5c7449d6d7122",
            "subnet_id": "subnet-01560000f2becb40f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb4e79a710463e7d",
            "route_table_id": "rtb-0687f822c84e01844",
            "subnet_id": "subnet-0aca503b01ce1ad4d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb39fcf816c46d0b",
            "route_table_id": "rtb-0687f822c84e01844",
            "subnet_id": "subnet-0404b0247f58e8122"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023aab81ac105f6ed",
            "route_table_id": "rtb-0687f822c84e01844",
            "subnet_id": "subnet-01fbddfa5e202aeda"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:security-group/sg-061d8ae78be88e9c3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061d8ae78be88e9c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-java-app-alb-20251006151253636200000001",
            "name_prefix": "sample-java-app-alb-",
            "owner_id": "043031296302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-alb-sg",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-alb-sg",
              "Project": "sample-java-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:security-group/sg-04accaf630d0ca838",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04accaf630d0ca838",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sample-java-app-jenkins-20251006164713746500000001",
            "name_prefix": "sample-java-app-jenkins-",
            "owner_id": "043031296302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-jenkins-sg",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-jenkins-sg",
              "Project": "sample-java-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:subnet/subnet-009d229a33e482145",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009d229a33e482145",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043031296302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-1",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-1",
              "Project": "sample-java-app"
            },
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:subnet/subnet-07b232e140a7d0f05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b232e140a7d0f05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043031296302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-2",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-2",
              "Project": "sample-java-app"
            },
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:subnet/subnet-01560000f2becb40f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01560000f2becb40f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043031296302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-3",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-private-3",
              "Project": "sample-java-app"
            },
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:subnet/subnet-0aca503b01ce1ad4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aca503b01ce1ad4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043031296302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-public-1",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-public-1",
              "Project": "sample-java-app"
            },
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:subnet/subnet-0404b0247f58e8122",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0404b0247f58e8122",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043031296302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-public-2",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-public-2",
              "Project": "sample-java-app"
            },
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:subnet/subnet-01fbddfa5e202aeda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fbddfa5e202aeda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043031296302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-public-3",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-public-3",
              "Project": "sample-java-app"
            },
            "vpc_id": "vpc-05ad3f07da1b43e07"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:043031296302:vpc/vpc-05ad3f07da1b43e07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a2571c47d78bac87",
            "default_route_table_id": "rtb-02221a7f839825dba",
            "default_security_group_id": "sg-0eadf401a44bab1e8",
            "dhcp_options_id": "dopt-0db1e5b400105fdb3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ad3f07da1b43e07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02221a7f839825dba",
            "owner_id": "043031296302",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-vpc",
              "Project": "sample-java-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-java-app-vpc",
              "Project": "sample-java-app"
            }
          }
        }
      ]
    }
  ]
}